WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300508
REGRESSION(
300927@main
) RELEASE_ASSERT(entry) in RemoteResourceCacheProxy::willDestroyNativeImage
https://bugs.webkit.org/show_bug.cgi?id=300508
Summary
REGRESSION(300927@main) RELEASE_ASSERT(entry) in RemoteResourceCacheProxy::wi...
Kimmo Kinnunen
Reported
2025-10-10 07:37:29 PDT
REGRESSION(
300927@main
) RELEASE_ASSERT(entry) RemoteResourceCacheProxy::willDestroyNativeImage
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2025-10-10 07:37:46 PDT
<
rdar://162330287
>
Kimmo Kinnunen
Comment 2
2025-10-10 13:02:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52137
EWS
Comment 3
2025-10-13 23:50:49 PDT
Committed
301460@main
(1f5ba2e6e963): <
https://commits.webkit.org/301460@main
> Reviewed commits have been landed. Closing PR #52137 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug