Source/WebKit/WebProcess/GPU/graphics/RemoteResourceCacheProxy.cpp
@@ -265,12 +265,6 @@ void RemoteResourceCacheProxy::willDestroyDisplayList(const DisplayList::Display
     m_remoteRenderingBackendProxy->releaseDisplayList(*identifier);
 }
 
-void RemoteResourceCacheProxy::releaseNativeImages()
-{
-    m_nativeImageResourceObserverWeakFactory.revokeAll();
-    m_nativeImages.clear();
-}
-
 void RemoteResourceCacheProxy::prepareForNextRenderingUpdate()
 {
     m_numberOfFontsUsedInCurrentRenderingUpdate = 0;
@@ -337,11 +331,12 @@ void RemoteResourceCacheProxy::didPaintLayers()
 
 void RemoteResourceCacheProxy::releaseMemory()
 {
+    // Release all resources that consume memory in GPUP.
+    // Other resources should be released by releasing the resource object references.
     m_resourceObserverWeakFactory.revokeAll();
     m_filters.clear();
     m_gradients.clear();
     m_displayLists.clear();
-    releaseNativeImages();
     releaseFonts();
     releaseFontCustomPlatformDatas();
 }
